Since font-size is no longer zero. Inline-blocks will cause whitespace around it. And Firefox doesn't respect my line-height (even if there is no text and just whitespace). Now it's just always 50pixels ($site-header-height).

--- a/modules/header/components/header/_header.scss
+++ b/modules/header/components/header/_header.scss
@@ -1,4 +1,5 @@
 %menu-item {
+  height: $site-header-height;
   padding-right: $base-whitespace * 2;
   padding-left: $base-whitespace * 2;
 
